# coursera_brown

./: .gitignore  CMakeLists.txt  README.md
profile/: profile.h
test_runner_lib/: CMakeLists.txt  test_runner.cpp  test_runner.h
week_1/: hash_person.cpp  hash_point.cpp  hash_set.cpp  head.cpp  main.cpp  priority_collection.cpp  secondary_index.cpp  set_iterator_next.cpp
week_2/: comment_server.cpp  comment_server_right_version.cpp  ini.cpp  ini.h  json.cpp  json.h  spendings_json.cpp  spendings_xml.cpp  test_ini.cpp  xml.cpp  xml.h
week_2/collide/: collide.cpp  collide_right_version.cpp  game_object.h  geo2d.cpp  geo2d.h
week_2/refactoring/: json.cpp  json.h  refactoring.cpp  xml.cpp  xml.h
week_2/stats_aggregator/: main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
week_3/: Common.h  animals.h  concurrent_map_2.cpp  lazy_value.cpp  main.cpp  pipeline.cpp  polynomial.cpp  print_stats_2.cpp  synchronized_2.cpp  zoo.cpp
week_4/: unique_ptr.cpp
week_4/cache/: Common.h  Solution.cpp  main.cpp
week_4/raii/: booking.h  new_booking_providers.h  new_trip_manager.h  old_booking_providers.h  old_trip_manager.h  test.cpp
week_4/textures/: Common.h  Solution.cpp  Textures.cpp  main.cpp
week_5/: domains.cpp  domains_bad_wa.cpp  draft.cpp  ebook.cpp  ebook_slow.cpp  expresses.cpp  expresses_slow.cpp  print_stats.cpp  print_stats_testing.cpp  team_tasks.cpp  test_domains.cpp
week_5/budget_desktop/: budget.cpp  budget_desktop.cpp
week_5/budget_mobile/: budget_mobile.cpp
week_5/budget_mobile_legacy/: budget_mobile_legacy.cpp
